--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.commentreplycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.commentreplycollectionloadoptions.yml
@@ -18,8 +18,6 @@ items:
       - 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#content:member'
       - 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#creationDate:member'
       - 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#mentions:member'
-      - 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#richContent:member'
   - uid: 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
@@ -64,7 +62,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#content:member'
     summary: |-
-      对于集合中的每一项：获取或设置批注答复的内容。 字符串为纯文本。
+      对于集合中的每一项：批注答复的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -94,7 +92,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：表示批注答复标识符。 只读。
+      对于集合中的每一项：指定注释答复标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -104,36 +102,6 @@ items:
     type: property
     syntax:
       content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#mentions:member'
-    summary: |-
-      对于集合中的每一项：获取注释中提到的实体（例如 "人员"）。
-
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: mentions
-    fullName: mentions
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'mentions?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.CommentReplyCollectionLoadOptions#richContent:member'
-    summary: |-
-      对于集合中的每一项：获取丰富注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
-
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: richContent
-    fullName: richContent
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'richContent?: boolean;'
       return:
         type:
           - boolean
