--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.commentupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.commentupdatedata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.CommentUpdateData#content:member'
   - uid: 'excel!Excel.Interfaces.CommentUpdateData#content:member'
     summary: |-
-      获取或设置批注的内容。 字符串为纯文本。
+      批注的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
