--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.slicerstyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.slicerstyleloadoptions.yml
@@ -44,7 +44,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.SlicerStyleLoadOptions#readOnly:member'
     summary: |-
-      指定此 SlicerStyle 对象是否为只读。 只读。
+      指定此 SlicerStyle 对象是否为只读。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
