--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.rangefont.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.rangefont.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeFont#bold:member'
@@ -48,7 +48,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFont#color:member'
     summary: |-
-      文本颜色的 HTML 颜色代码表示。 例如， \#FF0000 表示红色。
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -75,7 +75,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeFont#italic:member'
     summary: |-
-      表示字体的斜体状态。
+      指定字体的斜体状态。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
@@ -189,7 +189,7 @@ items:
                       }
   - uid: 'excel!Excel.RangeFont#name:member'
     summary: |-
-      字体名称（例如"Calibri"）
+      字体名称（例如，"Calibri"）
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -227,7 +227,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeFont#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -263,7 +263,7 @@ items:
           - number
   - uid: 'excel!Excel.RangeFont#strikethrough:member'
     summary: |-
-      表示字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
+      指定字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
@@ -278,7 +278,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFont#subscript:member'
     summary: |-
-      表示字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
+      指定字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subscript
@@ -293,7 +293,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFont#superscript:member'
     summary: |-
-      表示字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
+      指定字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: superscript
@@ -308,7 +308,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RangeFont#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域字体的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 空值表示整个区域没有统一的字体 tintAndShade 设置。
+      指定将区域字体的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个区域没有统一的字体 tintAndShade 设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
@@ -350,7 +350,7 @@ items:
         type:
           - 'excel!Excel.RangeFont#underline~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -360,7 +360,7 @@ references:
     name: Excel.Interfaces.RangeFontLoadOptions
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData:interface'
     name: Interfaces.RangeFontUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RangeFontData:interface'
     name: Excel.Interfaces.RangeFontData
