--- a/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.rangefontdata.yml
+++ b/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.rangefontdata.yml
@@ -1,41 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
-    summary: |-
-      此对象表示对象的字体属性（字体名称、字体大小、颜色等）。
-
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.RangeFontLoadOptions
-    fullName: Excel.Interfaces.RangeFontLoadOptions
+  - uid: 'excel!Excel.Interfaces.RangeFontData:interface'
+    summary: 描述通过调用返回的数据的接口`rangeFont.toJSON()`<!-- -->.
+    name: Excel.Interfaces.RangeFontData
+    fullName: Excel.Interfaces.RangeFontData
     langs:
       - typeScript
     type: interface
     package: excel!
     children:
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#bold:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#color:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#italic:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#size:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#strikethrough:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#subscript:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#superscript:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#tintAndShade:member'
-      - 'excel!Excel.Interfaces.RangeFontLoadOptions#underline:member'
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#bold:member'
+      - 'excel!Excel.Interfaces.RangeFontData#bold:member'
+      - 'excel!Excel.Interfaces.RangeFontData#color:member'
+      - 'excel!Excel.Interfaces.RangeFontData#italic:member'
+      - 'excel!Excel.Interfaces.RangeFontData#name:member'
+      - 'excel!Excel.Interfaces.RangeFontData#size:member'
+      - 'excel!Excel.Interfaces.RangeFontData#strikethrough:member'
+      - 'excel!Excel.Interfaces.RangeFontData#subscript:member'
+      - 'excel!Excel.Interfaces.RangeFontData#superscript:member'
+      - 'excel!Excel.Interfaces.RangeFontData#tintAndShade:member'
+      - 'excel!Excel.Interfaces.RangeFontData#underline:member'
+  - uid: 'excel!Excel.Interfaces.RangeFontData#bold:member'
     summary: |-
       表示字体的加粗状态。
 
@@ -50,7 +34,7 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#color:member'
+  - uid: 'excel!Excel.Interfaces.RangeFontData#color:member'
     summary: |-
       文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
@@ -61,11 +45,11 @@ items:
       - typeScript
     type: property
     syntax:
-      content: 'color?: boolean;'
+      content: 'color?: string;'
       return:
         type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#italic:member'
+          - string
+  - uid: 'excel!Excel.Interfaces.RangeFontData#italic:member'
     summary: |-
       指定字体的斜体状态。
 
@@ -80,7 +64,7 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#name:member'
+  - uid: 'excel!Excel.Interfaces.RangeFontData#name:member'
     summary: |-
       字体名称（例如，"Calibri"）
 
@@ -91,11 +75,11 @@ items:
       - typeScript
     type: property
     syntax:
-      content: 'name?: boolean;'
+      content: 'name?: string;'
       return:
         type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#size:member'
+          - string
+  - uid: 'excel!Excel.Interfaces.RangeFontData#size:member'
     summary: |-
       字号
 
@@ -106,11 +90,11 @@ items:
       - typeScript
     type: property
     syntax:
-      content: 'size?: boolean;'
+      content: 'size?: number;'
       return:
         type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#strikethrough:member'
+          - number
+  - uid: 'excel!Excel.Interfaces.RangeFontData#strikethrough:member'
     summary: |-
       指定字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
 
@@ -125,7 +109,7 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#subscript:member'
+  - uid: 'excel!Excel.Interfaces.RangeFontData#subscript:member'
     summary: |-
       指定字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
@@ -140,7 +124,7 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#superscript:member'
+  - uid: 'excel!Excel.Interfaces.RangeFontData#superscript:member'
     summary: |-
       指定字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
@@ -155,7 +139,7 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#tintAndShade:member'
+  - uid: 'excel!Excel.Interfaces.RangeFontData#tintAndShade:member'
     summary: |-
       指定将区域字体的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个区域没有统一的字体 tintAndShade 设置。
 
@@ -166,11 +150,11 @@ items:
       - typeScript
     type: property
     syntax:
-      content: 'tintAndShade?: boolean;'
+      content: 'tintAndShade?: number;'
       return:
         type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#underline:member'
+          - number
+  - uid: 'excel!Excel.Interfaces.RangeFontData#underline:member'
     summary: |-
       应用于字体的下划线类型。 有关详细信息，请参阅 RangeUnderlineStyle。
 
@@ -181,7 +165,17 @@ items:
       - typeScript
     type: property
     syntax:
-      content: 'underline?: boolean;'
+      content: 'underline?: Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant";'
       return:
         type:
-          - boolean
+          - 'excel!Excel.Interfaces.RangeFontData#underline~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.RangeFontData#underline~0:complex'
+    name: Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"
+    fullName: Excel.RangeUnderlineStyle | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"
+    spec.typeScript:
+      - uid: 'excel!Excel.RangeUnderlineStyle:enum'
+        name: Excel.RangeUnderlineStyle
+        fullName: Excel.RangeUnderlineStyle
+      - name: ' | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"'
+        fullName: ' | "None" | "Single" | "Double" | "SingleAccountant" | "DoubleAccountant"'
