commit translated contents

--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -19,6 +19,7 @@ items:
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#creationDate:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#id:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#mentions:member'
+      - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#resolved:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#richContent:member'
   - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
@@ -64,7 +65,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#content:member'
     summary: |-
-      对于集合中的每一项：获取或设置批注的内容。 字符串为纯文本。
+      对于集合中的每一项：注释的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -94,7 +95,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：代表注释标识符。 只读。
+      对于集合中的每一项：指定注释标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -109,9 +110,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#mentions:member'
     summary: |-
-      对于集合中的每一项：获取注释中提到的实体（例如 "人员"）。
+      对于集合中的每一项：获取注释中提到的实体（例如，人员）。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: mentions
     fullName: mentions
     langs:
@@ -122,11 +123,26 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#resolved:member'
+    summary: |-
+      对于集合中的每一项：注释线程状态。 值为 "true" 表示解析注释线程。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: resolved
+    fullName: resolved
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'resolved?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#richContent:member'
     summary: |-
       对于集合中的每一项：获取丰富注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: richContent
     fullName: richContent
     langs:
