--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartaxistitleformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartaxistitleformatloadoptions.yml
@@ -28,7 +28,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#font:member'
     summary: |-
-      表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。
+      指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
