--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartareaformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartareaformatdata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAreaFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#font:member'
     summary: |-
-      表示当前对象的字体属性（字体名称、字体大小、颜色等）。 只读。
+      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
