--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.databarconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.databarconditionalformatloadoptions.yml
@@ -35,7 +35,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#axisColor:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisColor
@@ -65,7 +65,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#barDirection:member'
     summary: |-
-      表示数据条图形应基于的方向。
+      指定数据条图形的基于方向。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: barDirection
