--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.commentdata.yml
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.CommentData#id:member'
       - 'excel!Excel.Interfaces.CommentData#mentions:member'
       - 'excel!Excel.Interfaces.CommentData#replies:member'
+      - 'excel!Excel.Interfaces.CommentData#resolved:member'
       - 'excel!Excel.Interfaces.CommentData#richContent:member'
   - uid: 'excel!Excel.Interfaces.CommentData#authorEmail:member'
     summary: |-
@@ -49,7 +50,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CommentData#content:member'
     summary: |-
-      获取或设置批注的内容。 字符串为纯文本。
+      批注的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -79,7 +80,7 @@ items:
           - '!Date:interface'
   - uid: 'excel!Excel.Interfaces.CommentData#id:member'
     summary: |-
-      表示批注标识符。 只读。
+      指定注释标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -94,9 +95,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CommentData#mentions:member'
     summary: |-
-      获取注释中提到的实体（如人员）。
+      获取注释中提到的实体（例如，人员）。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: mentions
     fullName: mentions
     langs:
@@ -109,7 +110,7 @@ items:
           - 'excel!Excel.Interfaces.CommentData#mentions~0:complex'
   - uid: 'excel!Excel.Interfaces.CommentData#replies:member'
     summary: |-
-      表示与批注关联的回复对象的集合。 只读。
+      表示与批注关联的回复对象的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: replies
@@ -122,11 +123,26 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.CommentData#replies~0:complex'
+  - uid: 'excel!Excel.Interfaces.CommentData#resolved:member'
+    summary: |-
+      注释线程状态。 值为 "true" 表示解析注释线程。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: resolved
+    fullName: resolved
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'resolved?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.CommentData#richContent:member'
     summary: |-
-      获取丰富的注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
+      获取丰富的注释内容（例如，注释中的提到）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: richContent
     fullName: richContent
     langs:
