--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.documentpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.documentpropertiesloadoptions.yml
@@ -38,7 +38,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#author:member'
     summary: |-
-      获取或设置工作簿的作者。
+      工作簿的作者。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: author
@@ -53,7 +53,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#category:member'
     summary: |-
-      获取或设置工作簿的类别。
+      工作簿的类别。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: category
@@ -68,7 +68,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#comments:member'
     summary: |-
-      获取或设置工作簿的注释。
+      工作簿的注释。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
@@ -83,7 +83,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#company:member'
     summary: |-
-      获取或设置工作簿的公司。
+      工作簿的公司。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: company
@@ -113,7 +113,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#keywords:member'
     summary: |-
-      获取或设置工作簿的关键字。
+      工作簿的关键字。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: keywords
@@ -143,7 +143,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#manager:member'
     summary: |-
-      获取或设置工作簿的管理者。
+      工作簿的管理者。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: manager
@@ -173,7 +173,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#subject:member'
     summary: |-
-      获取或设置工作簿的主题。
+      工作簿的主题。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subject
@@ -188,7 +188,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions#title:member'
     summary: |-
-      获取或设置工作簿的标题。
+      工作簿的标题。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
