--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pivotitemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pivotitemloadoptions.yml
@@ -76,7 +76,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#visible:member'
     summary: |-
-      确定 PivotItem 是否可见。
+      指定 PivotItem 是否可见。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
