--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.tableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.tableloadoptions.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableLoadOptions:interface'
     summary: |-
-      表示一个 Excel 表。 若要了解有关表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
+      表示 Excel 表格。 若要了解有关表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableLoadOptions
@@ -73,7 +73,7 @@ items:
           - 'excel!Excel.Interfaces.TableColumnCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#highlightFirstColumn:member'
     summary: |-
-      指明第一列是否包含特殊格式。
+      指定第一列是否包含特殊格式。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: highlightFirstColumn
@@ -88,7 +88,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#highlightLastColumn:member'
     summary: |-
-      指明最后一列是否包含特殊格式。
+      指定最后一列是否包含特殊格式。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: highlightLastColumn
@@ -103,7 +103,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中表的值。 即使表被重命名，标识符的值仍保持不变。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -165,7 +165,7 @@ items:
           - 'excel!Excel.Interfaces.TableRowCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showBandedColumns:member'
     summary: |-
-      指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。
+      指定列是否显示镶边格式，其中奇数列以不同的方式突出显示，即使是偶数，也可以使表更易于阅读。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBandedColumns
@@ -180,7 +180,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showBandedRows:member'
     summary: |-
-      指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。
+      指定行是否显示镶边格式，其中奇数行以不同的方式突出显示，即使是偶数行，也可以使表更易于阅读。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBandedRows
@@ -195,7 +195,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showFilterButton:member'
     summary: |-
-      指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。
+      指定筛选按钮是否显示在每个列标头的顶部。 仅当 table 中包含标题行时，才允许设定此设置。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showFilterButton
@@ -210,7 +210,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showHeaders:member'
     summary: |-
-      指示标头行是否可见。 该值可以设置为显示或删除标头行。
+      指定标题行是否可见。 该值可以设置为显示或删除标头行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeaders
@@ -225,7 +225,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#showTotals:member'
     summary: |-
-      指示总计行是否可见。 该值可以设置为显示或删除总计行。
+      指定汇总行是否可见。 该值可以设置为显示或删除总计行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showTotals
