--- a/docs/docs-ref-autogen/word/word/word.document.yml
+++ b/docs/docs-ref-autogen/word/word/word.document.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.Document#body:member'
@@ -461,7 +461,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'word!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'word!Word.Document#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -536,7 +536,7 @@ items:
           - 'word!Word.Document:class'
         description: ''
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.Body:class'
     name: Word.Body
@@ -556,7 +556,7 @@ references:
     name: OfficeExtension.EventHandlers<Word.ContentControlEventArgs>
     fullName: OfficeExtension.EventHandlers<Word.ContentControlEventArgs>
     spec.typeScript:
-      - uid: 'word!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -572,7 +572,7 @@ references:
     name: Word.SectionCollection
   - uid: 'word!Word.Interfaces.DocumentUpdateData:interface'
     name: Interfaces.DocumentUpdateData
-  - uid: 'word!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'word!Word.SettingCollection:class'
     name: Word.SettingCollection
