commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.topbottomconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.topbottomconditionalformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.TopBottomConditionalFormat:class'
     summary: |-
-      <span data-ttu-id="5438b-101">表示顶部/底部条件格式。</span><span class="sxs-lookup"><span data-stu-id="5438b-101">Represents a Top/Bottom conditional format.</span></span>
+      表示顶部/底部条件格式。
 
-      <span data-ttu-id="5438b-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5438b-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TopBottomConditionalFormat
     fullName: Excel.TopBottomConditionalFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TopBottomConditionalFormat#context:member'
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.TopBottomConditionalFormat#set:member(2)'
       - 'excel!Excel.TopBottomConditionalFormat#toJSON:member(1)'
   - uid: 'excel!Excel.TopBottomConditionalFormat#context:member'
-    summary: <span data-ttu-id="5438b-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="5438b-103">The request context associated with the object.</span></span> <span data-ttu-id="5438b-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="5438b-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TopBottomConditionalFormat#format:member'
     summary: |-
-      <span data-ttu-id="5438b-105">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-105">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span> <span data-ttu-id="5438b-106">只读。</span><span class="sxs-lookup"><span data-stu-id="5438b-106">Read-only.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="5438b-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5438b-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -51,7 +51,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeFormat:class'
   - uid: 'excel!Excel.TopBottomConditionalFormat#load:member(1)'
-    summary: <span data-ttu-id="5438b-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5438b-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5438b-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -65,11 +65,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="5438b-110">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="5438b-110">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions:interface'
   - uid: 'excel!Excel.TopBottomConditionalFormat#load:member(2)'
-    summary: <span data-ttu-id="5438b-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5438b-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5438b-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -83,11 +83,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="5438b-113">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-113">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.TopBottomConditionalFormat#load:member(3)'
-    summary: <span data-ttu-id="5438b-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="5438b-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="5438b-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -105,7 +105,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="5438b-116">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-116">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -114,9 +114,9 @@ items:
                       }
   - uid: 'excel!Excel.TopBottomConditionalFormat#rule:member'
     summary: |-
-      <span data-ttu-id="5438b-117">顶部/底部条件格式的条件。</span><span class="sxs-lookup"><span data-stu-id="5438b-117">The criteria of the Top/Bottom conditional format.</span></span>
+      顶部/底部条件格式的条件。
 
-      <span data-ttu-id="5438b-118">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5438b-118">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
@@ -128,9 +128,9 @@ items:
         type:
           - 'excel!Excel.ConditionalTopBottomRule:interface'
   - uid: 'excel!Excel.TopBottomConditionalFormat#set:member(1)'
-    summary: '<span data-ttu-id="5438b-119">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-119">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="5438b-120">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="5438b-120">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="5438b-121">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="5438b-121">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.TopBottomConditionalFormat): void`
     name: 'set(properties, options)'
@@ -146,15 +146,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="5438b-122">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-122">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="5438b-123">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="5438b-123">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.TopBottomConditionalFormat#set:member(2)'
-    summary: '<span data-ttu-id="5438b-124">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="5438b-124">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -172,7 +172,7 @@ items:
           type:
             - 'excel!Excel.TopBottomConditionalFormat:class'
   - uid: 'excel!Excel.TopBottomConditionalFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="5438b-125">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="5438b-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="5438b-126">.</span><span class="sxs-lookup"><span data-stu-id="5438b-126"></span></span> <span data-ttu-id="5438b-127">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="5438b-127"></span></span><!-- --><span data-ttu-id="5438b-128">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 TopBottomConditionalFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TopBottomConditionalFormatData`</span><span class="sxs-lookup"><span data-stu-id="5438b-128">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.TopBottomConditionalFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.TopBottomConditionalFormatData`</span></span><!-- --><span data-ttu-id="5438b-129">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="5438b-129">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 TopBottomConditionalFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TopBottomConditionalFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -185,7 +185,7 @@ items:
           - 'excel!Excel.Interfaces.TopBottomConditionalFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -199,7 +199,7 @@ references:
     name: Excel.ConditionalTopBottomRule
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData:interface'
     name: Interfaces.TopBottomConditionalFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatData:interface'
     name: Excel.Interfaces.TopBottomConditionalFormatData
