--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.databarconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.databarconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="b3a37-101">表示 Excel 条件数据栏类型。</span><span class="sxs-lookup"><span data-stu-id="b3a37-101">Represents an Excel Conditional Data Bar Type.</span></span>
+      表示 Excel 条件数据栏类型。
 
-      <span data-ttu-id="b3a37-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.DataBarConditionalFormatLoadOptions
     fullName: Excel.Interfaces.DataBarConditionalFormatLoadOptions
     langs:
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#showDataBarOnly:member'
       - 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#upperBoundRule:member'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="b3a37-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="b3a37-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="b3a37-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="b3a37-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="b3a37-105">).</span><span class="sxs-lookup"><span data-stu-id="b3a37-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -35,9 +35,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#axisColor:member'
     summary: |-
-      <span data-ttu-id="b3a37-106">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="b3a37-106">HTML color code representing the color of the Axis line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="b3a37-107">"" （空字符串）如果不存在或未设置轴。</span><span class="sxs-lookup"><span data-stu-id="b3a37-107">"" (empty string) if no axis is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
 
-      <span data-ttu-id="b3a37-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisColor
     fullName: axisColor
     langs:
@@ -50,9 +50,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#axisFormat:member'
     summary: |-
-      <span data-ttu-id="b3a37-109">为 Excel 数据栏确定轴的方式的表示形式。</span><span class="sxs-lookup"><span data-stu-id="b3a37-109">Representation of how the axis is determined for an Excel data bar.</span></span>
+      为 Excel 数据栏确定轴的方式的表示形式。
 
-      <span data-ttu-id="b3a37-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisFormat
     fullName: axisFormat
     langs:
@@ -65,9 +65,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#barDirection:member'
     summary: |-
-      <span data-ttu-id="b3a37-111">表示数据条图形应基于的方向。</span><span class="sxs-lookup"><span data-stu-id="b3a37-111">Represents the direction that the data bar graphic should be based on.</span></span>
+      指定数据条图形的基于方向。
 
-      <span data-ttu-id="b3a37-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: barDirection
     fullName: barDirection
     langs:
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#lowerBoundRule:member'
     summary: |-
-      <span data-ttu-id="b3a37-113">构成数据栏的下限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="b3a37-113">The rule for what consistutes the lower bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="b3a37-114">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="b3a37-114">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.lowerBoundRule = {...}` instead of `x.lowerBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="b3a37-115">).</span><span class="sxs-lookup"><span data-stu-id="b3a37-115"></span></span>
+      构成数据栏的下限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`<!-- -->).
 
-      <span data-ttu-id="b3a37-116">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-116">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lowerBoundRule
     fullName: lowerBoundRule
     langs:
@@ -95,9 +95,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#negativeFormat:member'
     summary: |-
-      <span data-ttu-id="b3a37-117">在 Excel 数据栏中的轴左侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="b3a37-117">Representation of all values to the left of the axis in an Excel data bar.</span></span>
+      在 Excel 数据栏中的轴左侧的所有值的表示形式。
 
-      <span data-ttu-id="b3a37-118">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-118">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: negativeFormat
     fullName: negativeFormat
     langs:
@@ -110,9 +110,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#positiveFormat:member'
     summary: |-
-      <span data-ttu-id="b3a37-119">在 Excel 数据栏中的轴右侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="b3a37-119">Representation of all values to the right of the axis in an Excel data bar.</span></span>
+      在 Excel 数据栏中的轴右侧的所有值的表示形式。
 
-      <span data-ttu-id="b3a37-120">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-120">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: positiveFormat
     fullName: positiveFormat
     langs:
@@ -125,9 +125,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#showDataBarOnly:member'
     summary: |-
-      <span data-ttu-id="b3a37-121">如果为 true，则对应用数据栏的单元格隐藏值。</span><span class="sxs-lookup"><span data-stu-id="b3a37-121">If true, hides the values from the cells where the data bar is applied.</span></span>
+      如果为 true，则对应用数据栏的单元格隐藏值。
 
-      <span data-ttu-id="b3a37-122">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-122">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDataBarOnly
     fullName: showDataBarOnly
     langs:
@@ -140,9 +140,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#upperBoundRule:member'
     summary: |-
-      <span data-ttu-id="b3a37-123">构成数据栏的上限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="b3a37-123">The rule for what constitutes the upper bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="b3a37-124">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="b3a37-124">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.upperBoundRule = {...}` instead of `x.upperBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="b3a37-125">).</span><span class="sxs-lookup"><span data-stu-id="b3a37-125"></span></span>
+      构成数据栏的上限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`<!-- -->).
 
-      <span data-ttu-id="b3a37-126">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3a37-126">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: upperBoundRule
     fullName: upperBoundRule
     langs:
