--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.formatprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.formatprotectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FormatProtectionData:interface'
-    summary: <span data-ttu-id="e294d-101">描述通过调用返回的数据的接口`formatProtection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e294d-101">An interface describing the data returned by calling `formatProtection.toJSON()`</span></span><!-- --><span data-ttu-id="e294d-102">.</span><span class="sxs-lookup"><span data-stu-id="e294d-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`formatProtection.toJSON()`<!-- -->.
     name: Excel.Interfaces.FormatProtectionData
     fullName: Excel.Interfaces.FormatProtectionData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.FormatProtectionData#locked:member'
   - uid: 'excel!Excel.Interfaces.FormatProtectionData#formulaHidden:member'
     summary: |-
-      <span data-ttu-id="e294d-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="e294d-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
+      指定 Excel 是否隐藏区域中单元格的公式。 指示整个区域不具有统一公式隐藏设置的空值。
 
-      <span data-ttu-id="e294d-105">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e294d-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.FormatProtectionData#locked:member'
     summary: |-
-      <span data-ttu-id="e294d-106">指示 Excel 是否将对象中的单元格锁定。</span><span class="sxs-lookup"><span data-stu-id="e294d-106">Indicates if Excel locks the cells in the object.</span></span> <span data-ttu-id="e294d-107">指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="e294d-107">A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
+      指定 Excel 是否锁定对象中的单元格。 指示整个区域不具有统一锁定设置的空值。
 
-      <span data-ttu-id="e294d-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e294d-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
