--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangefontdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangefontdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFontData:interface'
-    summary: <span data-ttu-id="6a024-101">描述通过调用返回的数据的接口`rangeFont.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="6a024-101">An interface describing the data returned by calling `rangeFont.toJSON()`</span></span><!-- --><span data-ttu-id="6a024-102">.</span><span class="sxs-lookup"><span data-stu-id="6a024-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeFont.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeFontData
     fullName: Excel.Interfaces.RangeFontData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFontData#underline:member'
   - uid: 'excel!Excel.Interfaces.RangeFontData#bold:member'
     summary: |-
-      <span data-ttu-id="6a024-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="6a024-103">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="6a024-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a024-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#color:member'
     summary: |-
-      <span data-ttu-id="6a024-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="6a024-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="6a024-106">例如，</span><span class="sxs-lookup"><span data-stu-id="6a024-106">E.g.</span></span> <span data-ttu-id="6a024-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="6a024-107">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="6a024-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a024-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontData#italic:member'
     summary: |-
-      <span data-ttu-id="6a024-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="6a024-109">Represents the italic status of the font.</span></span>
+      指定字体的斜体状态。
 
-      <span data-ttu-id="6a024-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a024-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontData#name:member'
     summary: |-
-      <span data-ttu-id="6a024-111">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="6a024-111">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="6a024-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a024-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontData#size:member'
     summary: |-
-      <span data-ttu-id="6a024-113">字号</span><span class="sxs-lookup"><span data-stu-id="6a024-113">Font size.</span></span>
+      字号
 
-      <span data-ttu-id="6a024-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a024-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -92,9 +92,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontData#underline:member'
     summary: |-
-      <span data-ttu-id="6a024-115">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="6a024-115">Type of underline applied to the font.</span></span> <span data-ttu-id="6a024-116">有关详细信息，请参阅 RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="6a024-116">See Excel.RangeUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 RangeUnderlineStyle。
 
-      <span data-ttu-id="6a024-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a024-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
