--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.rangesort.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.rangesort.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.RangeSort:class'
     summary: |-
-      <span data-ttu-id="1fdc0-101">管理对 Range 对象的排序操作。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-101">Manages sorting operations on Range objects.</span></span>
+      管理对 Range 对象的排序操作。
 
-      <span data-ttu-id="1fdc0-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdc0-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RangeSort
     fullName: Excel.RangeSort
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeSort#apply:member(1)'
@@ -20,9 +20,9 @@ items:
       - 'excel!Excel.RangeSort#toJSON:member(1)'
   - uid: 'excel!Excel.RangeSort#apply:member(1)'
     summary: |-
-      <span data-ttu-id="1fdc0-103">执行排序操作。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-103">Perform a sort operation.</span></span>
+      执行排序操作。
 
-      <span data-ttu-id="1fdc0-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdc0-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'apply(fields, matchCase, hasHeaders, orientation, method)'
     fullName: 'apply(fields, matchCase, hasHeaders, orientation, method)'
     langs:
@@ -36,30 +36,30 @@ items:
         description: ''
       parameters:
         - id: fields
-          description: <span data-ttu-id="1fdc0-105">要用作排序依据的条件列表。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-105">The list of conditions to sort on.</span></span>
+          description: 要用作排序依据的条件列表。
           type:
             - 'excel!Excel.RangeSort#apply~0:complex'
         - id: matchCase
-          description: <span data-ttu-id="1fdc0-106">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-106">Optional.</span></span> <span data-ttu-id="1fdc0-107">是否让大小写对字符串排序产生影响。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-107">Whether to have the casing impact string ordering.</span></span>
+          description: 可选。 是否让大小写对字符串排序产生影响。
           type:
             - boolean
         - id: hasHeaders
-          description: <span data-ttu-id="1fdc0-108">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-108">Optional.</span></span> <span data-ttu-id="1fdc0-109">该区域是否有标头。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-109">Whether the range has a header.</span></span>
+          description: 可选。 该区域是否有标头。
           type:
             - boolean
         - id: orientation
-          description: <span data-ttu-id="1fdc0-110">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-110">Optional.</span></span> <span data-ttu-id="1fdc0-111">该操作是对行还是列排序。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-111">Whether the operation is sorting rows or columns.</span></span>
+          description: 可选。 该操作是对行还是列排序。
           type:
             - 'excel!Excel.SortOrientation:enum'
         - id: method
-          description: <span data-ttu-id="1fdc0-112">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-112">Optional.</span></span> <span data-ttu-id="1fdc0-113">用于中文字符的排序方法。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-113">The ordering method used for Chinese characters.</span></span>
+          description: 可选。 用于中文字符的排序方法。
           type:
             - 'excel!Excel.SortMethod:enum'
   - uid: 'excel!Excel.RangeSort#apply:member(2)'
     summary: |-
-      <span data-ttu-id="1fdc0-114">执行排序操作。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-114">Perform a sort operation.</span></span>
+      执行排序操作。
 
-      <span data-ttu-id="1fdc0-115">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdc0-115">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'apply(fields, matchCase, hasHeaders, orientationString, method)'
     fullName: 'apply(fields, matchCase, hasHeaders, orientationString, method)'
     langs:
@@ -73,27 +73,27 @@ items:
         description: ''
       parameters:
         - id: fields
-          description: <span data-ttu-id="1fdc0-116">要用作排序依据的条件列表。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-116">The list of conditions to sort on.</span></span>
+          description: 要用作排序依据的条件列表。
           type:
             - 'excel!Excel.RangeSort#apply~1:complex'
         - id: matchCase
-          description: <span data-ttu-id="1fdc0-117">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-117">Optional.</span></span> <span data-ttu-id="1fdc0-118">是否让大小写对字符串排序产生影响。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-118">Whether to have the casing impact string ordering.</span></span>
+          description: 可选。 是否让大小写对字符串排序产生影响。
           type:
             - boolean
         - id: hasHeaders
-          description: <span data-ttu-id="1fdc0-119">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-119">Optional.</span></span> <span data-ttu-id="1fdc0-120">该区域是否有标头。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-120">Whether the range has a header.</span></span>
+          description: 可选。 该区域是否有标头。
           type:
             - boolean
         - id: orientationString
-          description: <span data-ttu-id="1fdc0-121">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-121">Optional.</span></span> <span data-ttu-id="1fdc0-122">该操作是对行还是列排序。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-122">Whether the operation is sorting rows or columns.</span></span>
+          description: 可选。 该操作是对行还是列排序。
           type:
             - '"Rows" | "Columns"'
         - id: method
-          description: <span data-ttu-id="1fdc0-123">可选。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-123">Optional.</span></span> <span data-ttu-id="1fdc0-124">用于中文字符的排序方法。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-124">The ordering method used for Chinese characters.</span></span>
+          description: 可选。 用于中文字符的排序方法。
           type:
             - '"PinYin" | "StrokeCount"'
   - uid: 'excel!Excel.RangeSort#context:member'
-    summary: <span data-ttu-id="1fdc0-125">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-125">The request context associated with the object.</span></span> <span data-ttu-id="1fdc0-126">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-126">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -105,7 +105,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeSort#toJSON:member(1)'
-    summary: '<span data-ttu-id="1fdc0-127">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="1fdc0-127">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="1fdc0-128">.</span><span class="sxs-lookup"><span data-stu-id="1fdc0-128"></span></span> <span data-ttu-id="1fdc0-129">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="1fdc0-129"></span></span><!-- --><span data-ttu-id="1fdc0-130">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RangeSort 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeSortData`</span><span class="sxs-lookup"><span data-stu-id="1fdc0-130">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RangeSort object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeSortData`</span></span><!-- --><span data-ttu-id="1fdc0-131">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="1fdc0-131">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RangeSort 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeSortData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -124,7 +124,7 @@ items:
                     }
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RangeSort#apply~0:complex'
     name: 'Excel.SortField[]'
