--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartplotarea.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartplotarea.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartPlotArea:class'
     summary: |-
-      <span data-ttu-id="dd9e9-101">此对象表示 chart plotArea 对象的属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-101">This object represents the attributes for a chart plotArea object.</span></span>
+      此对象表示 chart plotArea 对象的属性。
 
-      <span data-ttu-id="dd9e9-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartPlotArea
     fullName: Excel.ChartPlotArea
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPlotArea#context:member'
@@ -32,7 +32,7 @@ items:
       - 'excel!Excel.ChartPlotArea#top:member'
       - 'excel!Excel.ChartPlotArea#width:member'
   - uid: 'excel!Excel.ChartPlotArea#context:member'
-    summary: <span data-ttu-id="dd9e9-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-103">The request context associated with the object.</span></span> <span data-ttu-id="dd9e9-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPlotArea#format:member'
     summary: |-
-      <span data-ttu-id="dd9e9-105">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-105">Represents the formatting of a chart plotArea.</span></span>
+      指定图表 plotArea 的格式。
 
-      <span data-ttu-id="dd9e9-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.ChartPlotAreaFormat:class'
   - uid: 'excel!Excel.ChartPlotArea#height:member'
     summary: |-
-      <span data-ttu-id="dd9e9-107">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-107">Represents the height value of plotArea.</span></span>
+      指定 plotArea 的高度值。
 
-      <span data-ttu-id="dd9e9-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -75,9 +75,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideHeight:member'
     summary: |-
-      <span data-ttu-id="dd9e9-109">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-109">Represents the insideHeight value of plotArea.</span></span>
+      指定 plotArea 的 insideHeight 值。
 
-      <span data-ttu-id="dd9e9-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideHeight
     fullName: insideHeight
     langs:
@@ -90,9 +90,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideLeft:member'
     summary: |-
-      <span data-ttu-id="dd9e9-111">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-111">Represents the insideLeft value of plotArea.</span></span>
+      指定 plotArea 的 insideLeft 值。
 
-      <span data-ttu-id="dd9e9-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideLeft
     fullName: insideLeft
     langs:
@@ -105,9 +105,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideTop:member'
     summary: |-
-      <span data-ttu-id="dd9e9-113">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-113">Represents the insideTop value of plotArea.</span></span>
+      指定 plotArea 的 insideTop 值。
 
-      <span data-ttu-id="dd9e9-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideTop
     fullName: insideTop
     langs:
@@ -120,9 +120,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideWidth:member'
     summary: |-
-      <span data-ttu-id="dd9e9-115">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-115">Represents the insideWidth value of plotArea.</span></span>
+      指定 plotArea 的 insideWidth 值。
 
-      <span data-ttu-id="dd9e9-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideWidth
     fullName: insideWidth
     langs:
@@ -135,9 +135,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#left:member'
     summary: |-
-      <span data-ttu-id="dd9e9-117">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-117">Represents the left value of plotArea.</span></span>
+      指定 plotArea 的左侧值。
 
-      <span data-ttu-id="dd9e9-118">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -149,7 +149,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.ChartPlotArea#load:member(1)'
-    summary: <span data-ttu-id="dd9e9-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="dd9e9-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-120">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -163,11 +163,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="dd9e9-121">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-121">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions:interface'
   - uid: 'excel!Excel.ChartPlotArea#load:member(2)'
-    summary: <span data-ttu-id="dd9e9-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="dd9e9-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -181,11 +181,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="dd9e9-124">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartPlotArea#load:member(3)'
-    summary: <span data-ttu-id="dd9e9-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="dd9e9-126">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-126">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -203,7 +203,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="dd9e9-127">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-127">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -212,9 +212,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartPlotArea#position:member'
     summary: |-
-      <span data-ttu-id="dd9e9-128">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-128">Represents the position of plotArea.</span></span>
+      指定 plotArea 的位置。
 
-      <span data-ttu-id="dd9e9-129">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-129">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -226,9 +226,9 @@ items:
         type:
           - 'excel!Excel.ChartPlotArea#position~0:complex'
   - uid: 'excel!Excel.ChartPlotArea#set:member(1)'
-    summary: '<span data-ttu-id="dd9e9-130">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-130">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="dd9e9-131">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-131">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="dd9e9-132">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="dd9e9-132">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartPlotArea): void`
     name: 'set(properties, options)'
@@ -244,15 +244,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="dd9e9-133">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-133">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartPlotAreaUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="dd9e9-134">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-134">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPlotArea#set:member(2)'
-    summary: '<span data-ttu-id="dd9e9-135">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-135">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -270,7 +270,7 @@ items:
           type:
             - 'excel!Excel.ChartPlotArea:class'
   - uid: 'excel!Excel.ChartPlotArea#toJSON:member(1)'
-    summary: '<span data-ttu-id="dd9e9-136">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="dd9e9-136">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="dd9e9-137">.</span><span class="sxs-lookup"><span data-stu-id="dd9e9-137"></span></span> <span data-ttu-id="dd9e9-138">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="dd9e9-138"></span></span><!-- --><span data-ttu-id="dd9e9-139">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPlotArea 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPlotAreaData`</span><span class="sxs-lookup"><span data-stu-id="dd9e9-139">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartPlotArea object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartPlotAreaData`</span></span><!-- --><span data-ttu-id="dd9e9-140">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-140">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPlotArea 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPlotAreaData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -284,9 +284,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartPlotArea#top:member'
     summary: |-
-      <span data-ttu-id="dd9e9-141">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-141">Represents the top value of plotArea.</span></span>
+      指定 plotArea 的最高值。
 
-      <span data-ttu-id="dd9e9-142">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-142">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -299,9 +299,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#width:member'
     summary: |-
-      <span data-ttu-id="dd9e9-143">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="dd9e9-143">Represents the width value of plotArea.</span></span>
+      指定 plotArea 的宽度值。
 
-      <span data-ttu-id="dd9e9-144">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd9e9-144">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -313,7 +313,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -334,7 +334,7 @@ references:
         fullName: ' | "Automatic" | "Custom"'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData:interface'
     name: Interfaces.ChartPlotAreaUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData:interface'
     name: Excel.Interfaces.ChartPlotAreaData
