--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotareaformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotareaformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData:interface'
-    summary: '<span data-ttu-id="954b9-101">一个用于更新 ChartPlotAreaFormat 对象上的数据的接口，可用于`chartPlotAreaFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="954b9-101">An interface for updating data on the ChartPlotAreaFormat object, for use in `chartPlotAreaFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="954b9-102">.</span><span class="sxs-lookup"><span data-stu-id="954b9-102"></span></span>'
+    summary: '一个用于更新 ChartPlotAreaFormat 对象上的数据的接口，可用于`chartPlotAreaFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartPlotAreaFormatUpdateData
     fullName: Excel.Interfaces.ChartPlotAreaFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData#border:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData#border:member'
     summary: |-
-      <span data-ttu-id="954b9-103">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="954b9-103">Represents the border attributes of a chart plotArea.</span></span>
+      指定图表 plotArea 的边框属性。
 
-      <span data-ttu-id="954b9-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="954b9-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
