--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.headerfooter.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.headerfooter.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.HeaderFooter:class'
-    summary: '<span data-ttu-id="f809a-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.HeaderFooter
     fullName: Excel.HeaderFooter
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.HeaderFooter#centerFooter:member'
@@ -26,9 +26,9 @@ items:
       - 'excel!Excel.HeaderFooter#toJSON:member(1)'
   - uid: 'excel!Excel.HeaderFooter#centerFooter:member'
     summary: |-
-      <span data-ttu-id="f809a-102">获取或设置工作表的中心页脚。</span><span class="sxs-lookup"><span data-stu-id="f809a-102">Gets or sets the center footer of the worksheet.</span></span> <span data-ttu-id="f809a-103">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f809a-103">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f809a-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerFooter
     fullName: centerFooter
     langs:
@@ -41,9 +41,9 @@ items:
           - string
   - uid: 'excel!Excel.HeaderFooter#centerHeader:member'
     summary: |-
-      <span data-ttu-id="f809a-105">获取或设置工作表的中心页眉。</span><span class="sxs-lookup"><span data-stu-id="f809a-105">Gets or sets the center header of the worksheet.</span></span> <span data-ttu-id="f809a-106">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f809a-106">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f809a-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHeader
     fullName: centerHeader
     langs:
@@ -55,7 +55,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.HeaderFooter#context:member'
-    summary: <span data-ttu-id="f809a-108">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="f809a-108">The request context associated with the object.</span></span> <span data-ttu-id="f809a-109">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="f809a-109">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.HeaderFooter#leftFooter:member'
     summary: |-
-      <span data-ttu-id="f809a-110">获取或设置工作表的左侧页脚。</span><span class="sxs-lookup"><span data-stu-id="f809a-110">Gets or sets the left footer of the worksheet.</span></span> <span data-ttu-id="f809a-111">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f809a-111">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f809a-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftFooter
     fullName: leftFooter
     langs:
@@ -83,9 +83,9 @@ items:
           - string
   - uid: 'excel!Excel.HeaderFooter#leftHeader:member'
     summary: |-
-      <span data-ttu-id="f809a-113">获取或设置工作表的左侧页眉。</span><span class="sxs-lookup"><span data-stu-id="f809a-113">Gets or sets the left header of the worksheet.</span></span> <span data-ttu-id="f809a-114">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f809a-114">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f809a-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftHeader
     fullName: leftHeader
     langs:
@@ -97,7 +97,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.HeaderFooter#load:member(1)'
-    summary: <span data-ttu-id="f809a-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="f809a-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="f809a-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -111,11 +111,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="f809a-118">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="f809a-118">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.HeaderFooterLoadOptions:interface'
   - uid: 'excel!Excel.HeaderFooter#load:member(2)'
-    summary: <span data-ttu-id="f809a-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="f809a-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="f809a-120">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -129,11 +129,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="f809a-121">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.HeaderFooter#load:member(3)'
-    summary: <span data-ttu-id="f809a-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="f809a-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="f809a-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -151,7 +151,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="f809a-124">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-124">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -160,9 +160,9 @@ items:
                       }
   - uid: 'excel!Excel.HeaderFooter#rightFooter:member'
     summary: |-
-      <span data-ttu-id="f809a-125">获取或设置工作表的右侧页脚。</span><span class="sxs-lookup"><span data-stu-id="f809a-125">Gets or sets the right footer of the worksheet.</span></span> <span data-ttu-id="f809a-126">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f809a-126">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f809a-127">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightFooter
     fullName: rightFooter
     langs:
@@ -175,9 +175,9 @@ items:
           - string
   - uid: 'excel!Excel.HeaderFooter#rightHeader:member'
     summary: |-
-      <span data-ttu-id="f809a-128">获取或设置工作表的右侧页眉。</span><span class="sxs-lookup"><span data-stu-id="f809a-128">Gets or sets the right header of the worksheet.</span></span> <span data-ttu-id="f809a-129">若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。</span><span class="sxs-lookup"><span data-stu-id="f809a-129">To apply font formatting or insert a variable value, use format codes specified here: https://msdn.microsoft.com/en-us/library/bb225426.aspx.</span></span>
+      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
-      <span data-ttu-id="f809a-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f809a-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightHeader
     fullName: rightHeader
     langs:
@@ -189,9 +189,9 @@ items:
         type:
           - string
   - uid: 'excel!Excel.HeaderFooter#set:member(1)'
-    summary: '<span data-ttu-id="f809a-131">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-131">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="f809a-132">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="f809a-132">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="f809a-133">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="f809a-133">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.HeaderFooter): void`
     name: 'set(properties, options)'
@@ -207,15 +207,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="f809a-134">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-134">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="f809a-135">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="f809a-135">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.HeaderFooter#set:member(2)'
-    summary: '<span data-ttu-id="f809a-136">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="f809a-136">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -233,7 +233,7 @@ items:
           type:
             - 'excel!Excel.HeaderFooter:class'
   - uid: 'excel!Excel.HeaderFooter#toJSON:member(1)'
-    summary: '<span data-ttu-id="f809a-137">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="f809a-137">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="f809a-138">.</span><span class="sxs-lookup"><span data-stu-id="f809a-138"></span></span> <span data-ttu-id="f809a-139">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="f809a-139"></span></span><!-- --><span data-ttu-id="f809a-140">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 HeaderFooter 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.HeaderFooterData`</span><span class="sxs-lookup"><span data-stu-id="f809a-140">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.HeaderFooter object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.HeaderFooterData`</span></span><!-- --><span data-ttu-id="f809a-141">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="f809a-141">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 HeaderFooter 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.HeaderFooterData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -246,7 +246,7 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -256,7 +256,7 @@ references:
     name: Excel.Interfaces.HeaderFooterLoadOptions
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
     name: Interfaces.HeaderFooterUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.HeaderFooterData:interface'
     name: Excel.Interfaces.HeaderFooterData
