--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.cellvalueconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.cellvalueconditionalformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatData:interface'
-    summary: <span data-ttu-id="6e484-101">描述通过调用返回的数据的接口`cellValueConditionalFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="6e484-101">An interface describing the data returned by calling `cellValueConditionalFormat.toJSON()`</span></span><!-- --><span data-ttu-id="6e484-102">.</span><span class="sxs-lookup"><span data-stu-id="6e484-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`cellValueConditionalFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.CellValueConditionalFormatData
     fullName: Excel.Interfaces.CellValueConditionalFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.CellValueConditionalFormatData#rule:member'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatData#format:member'
     summary: |-
-      <span data-ttu-id="6e484-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="6e484-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="6e484-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6e484-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatData#rule:member'
     summary: |-
-      <span data-ttu-id="6e484-105">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="6e484-105">Represents the Rule object on this conditional format.</span></span>
+      指定此条件格式的 Rule 对象。
 
-      <span data-ttu-id="6e484-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6e484-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
