--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapeupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData:interface'
-    summary: '<span data-ttu-id="af71a-101">一个接口，用于更新 Shape 对象上的数据，以供在`shape.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="af71a-101">An interface for updating data on the Shape object, for use in `shape.set({ ... })`</span></span><!-- --><span data-ttu-id="af71a-102">.</span><span class="sxs-lookup"><span data-stu-id="af71a-102"></span></span>'
+    summary: '一个接口，用于更新 Shape 对象上的数据，以供在`shape.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ShapeUpdateData
     fullName: Excel.Interfaces.ShapeUpdateData
     langs:
@@ -24,9 +24,9 @@ items:
       - 'excel!Excel.Interfaces.ShapeUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#altTextDescription:member'
     summary: |-
-      <span data-ttu-id="af71a-103">返回或设置形状对象的可选说明文本。</span><span class="sxs-lookup"><span data-stu-id="af71a-103">Returns or sets the alternative description text for a Shape object.</span></span>
+      指定 Shape 对象的替代说明文本。
 
-      <span data-ttu-id="af71a-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextDescription
     fullName: altTextDescription
     langs:
@@ -39,9 +39,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#altTextTitle:member'
     summary: |-
-      <span data-ttu-id="af71a-105">返回或设置形状对象的可选标题文本。</span><span class="sxs-lookup"><span data-stu-id="af71a-105">Returns or sets the alternative title text for a Shape object.</span></span>
+      为 Shape 对象指定可选的标题文本。
 
-      <span data-ttu-id="af71a-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextTitle
     fullName: altTextTitle
     langs:
@@ -54,9 +54,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#fill:member'
     summary: |-
-      <span data-ttu-id="af71a-107">返回此形状的填充格式。</span><span class="sxs-lookup"><span data-stu-id="af71a-107">Returns the fill formatting of this shape.</span></span>
+      返回此形状的填充格式。
 
-      <span data-ttu-id="af71a-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -69,9 +69,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeFillUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#geometricShapeType:member'
     summary: |-
-      <span data-ttu-id="af71a-109">表示此几何形状的几何形状类型。</span><span class="sxs-lookup"><span data-stu-id="af71a-109">Represents the geometric shape type of this geometric shape.</span></span> <span data-ttu-id="af71a-110">有关详细信息，请参阅 Excel.GeometricShapeType。</span><span class="sxs-lookup"><span data-stu-id="af71a-110">See Excel.GeometricShapeType for details.</span></span> <span data-ttu-id="af71a-111">如果形状类型不是“GeometricShape”，返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="af71a-111">Returns null if the shape type is not "GeometricShape".</span></span>
+      指定此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
 
-      <span data-ttu-id="af71a-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: geometricShapeType
     fullName: geometricShapeType
     langs:
@@ -84,9 +84,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeUpdateData#geometricShapeType~0:complex'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="af71a-113">表示形状的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="af71a-113">Represents the height, in points, of the shape.</span></span> <span data-ttu-id="af71a-114">当设置为负值或零作为输入时，将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="af71a-114">Throws an invalid argument exception when set with a negative value or zero as input.</span></span>
+      指定形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
-      <span data-ttu-id="af71a-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -99,9 +99,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="af71a-116">从形状左侧到工作表左侧的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="af71a-116">The distance, in points, from the left side of the shape to the left side of the worksheet.</span></span> <span data-ttu-id="af71a-117">当设置为负值作为输入时，将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="af71a-117">Throws an invalid argument exception when set with a negative value as input.</span></span>
+      从形状左侧到工作表左侧的距离（以磅为单位）。 当设置为负值作为输入时，将引发无效参数异常。
 
-      <span data-ttu-id="af71a-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -114,9 +114,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#lineFormat:member'
     summary: |-
-      <span data-ttu-id="af71a-119">返回此形状的线条格式。</span><span class="sxs-lookup"><span data-stu-id="af71a-119">Returns the line formatting of this shape.</span></span>
+      返回此形状的线条格式。
 
-      <span data-ttu-id="af71a-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lineFormat
     fullName: lineFormat
     langs:
@@ -129,9 +129,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#lockAspectRatio:member'
     summary: |-
-      <span data-ttu-id="af71a-121">指定此形状的纵横比是否锁定。</span><span class="sxs-lookup"><span data-stu-id="af71a-121">Specifies whether or not the aspect ratio of this shape is locked.</span></span>
+      指定此形状的纵横比是否已锁定。
 
-      <span data-ttu-id="af71a-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lockAspectRatio
     fullName: lockAspectRatio
     langs:
@@ -144,9 +144,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="af71a-123">表示形状的名称。</span><span class="sxs-lookup"><span data-stu-id="af71a-123">Represents the name of the shape.</span></span>
+      指定形状的名称。
 
-      <span data-ttu-id="af71a-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -159,9 +159,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#rotation:member'
     summary: |-
-      <span data-ttu-id="af71a-125">表示形状的旋转度数。</span><span class="sxs-lookup"><span data-stu-id="af71a-125">Represents the rotation, in degrees, of the shape.</span></span>
+      指定形状的旋转角度（以度为单位）。
 
-      <span data-ttu-id="af71a-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rotation
     fullName: rotation
     langs:
@@ -174,9 +174,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="af71a-127">从形状上边缘到工作表上边缘之间的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="af71a-127">The distance, in points, from the top edge of the shape to the top edge of the worksheet.</span></span> <span data-ttu-id="af71a-128">当设置为负值作为输入时，将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="af71a-128">Throws an invalid argument exception when set with a negative value as input.</span></span>
+      从形状上边缘到工作表上边缘之间的距离（以磅为单位）。 当设置为负值作为输入时，将引发无效参数异常。
 
-      <span data-ttu-id="af71a-129">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-129">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -189,9 +189,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="af71a-130">表示此形状的可视性。</span><span class="sxs-lookup"><span data-stu-id="af71a-130">Represents the visibility of this shape.</span></span>
+      指定形状是否可见。
 
-      <span data-ttu-id="af71a-131">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-131">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -204,9 +204,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="af71a-132">表示形状的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="af71a-132">Represents the width, in points, of the shape.</span></span> <span data-ttu-id="af71a-133">当设置为负值或零作为输入时，将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="af71a-133">Throws an invalid argument exception when set with a negative value or zero as input.</span></span>
+      指定形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
-      <span data-ttu-id="af71a-134">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af71a-134">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
