--- a/docs/docs-ref-autogen/onenote/onenote/onenote.requestcontext.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.requestcontext.yml
@@ -7,13 +7,13 @@ items:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientRequestContext:class'
+      - 'office!OfficeExtension.ClientRequestContext:class'
     package: onenote!
     children:
       - 'onenote!OneNote.RequestContext:constructor(1)'
       - 'onenote!OneNote.RequestContext#application:member'
   - uid: 'onenote!OneNote.RequestContext:constructor(1)'
-    summary: <span data-ttu-id="d5ff6-101">构造`RequestContext`类的新实例</span><span class="sxs-lookup"><span data-stu-id="d5ff6-101">Constructs a new instance of the `RequestContext` class</span></span>
+    summary: 构造`RequestContext`类的新实例
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
@@ -38,7 +38,7 @@ items:
         type:
           - 'onenote!OneNote.Application:class'
 references:
-  - uid: 'onenote!OfficeExtension.ClientRequestContext:class'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
     name: OfficeExtension.ClientRequestContext
   - uid: 'onenote!OneNote.Application:class'
     name: Application
