--- a/docs/docs-ref-autogen/word/word/word.customxmlpartcollection.yml
+++ b/docs/docs-ref-autogen/word/word/word.customxmlpartcollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.CustomXmlPartCollection:class'
     summary: |-
-      <span data-ttu-id="10951-101">包含[CustomXmlPart](xref:word!Word.CustomXmlPart:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="10951-101">Contains the collection of [Word.CustomXmlPart](xref:word!Word.CustomXmlPart:class) objects.</span></span>
+      包含[CustomXmlPart](xref:word!Word.CustomXmlPart:class)对象的集合。
 
-      <span data-ttu-id="10951-102">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="10951-102">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: Word.CustomXmlPartCollection
     fullName: Word.CustomXmlPartCollection
@@ -12,7 +12,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.CustomXmlPartCollection#add:member(1)'
@@ -30,9 +30,9 @@ items:
       - 'word!Word.CustomXmlPartCollection#untrack:member(1)'
   - uid: 'word!Word.CustomXmlPartCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="10951-103">向文档中添加新的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="10951-103">Adds a new custom XML part to the document.</span></span>
+      向文档中添加新的自定义 XML 部件。
 
-      <span data-ttu-id="10951-104">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="10951-104">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: add(xml)
     fullName: add(xml)
@@ -47,11 +47,11 @@ items:
         description: ''
       parameters:
         - id: xml
-          description: <span data-ttu-id="10951-105">必需。</span><span class="sxs-lookup"><span data-stu-id="10951-105">Required.</span></span> <span data-ttu-id="10951-106">XML 内容。</span><span class="sxs-lookup"><span data-stu-id="10951-106">XML content.</span></span> <span data-ttu-id="10951-107">必须是有效的 XML 片段。</span><span class="sxs-lookup"><span data-stu-id="10951-107">Must be a valid XML fragment.</span></span>
+          description: 必需。 XML 内容。 必须是有效的 XML 片段。
           type:
             - string
   - uid: 'word!Word.CustomXmlPartCollection#context:member'
-    summary: <span data-ttu-id="10951-108">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="10951-108">The request context associated with the object.</span></span> <span data-ttu-id="10951-109">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="10951-109">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     isPreview: true
     name: context
     fullName: context
@@ -65,9 +65,9 @@ items:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.CustomXmlPartCollection#getByNamespace:member(1)'
     summary: |-
-      <span data-ttu-id="10951-110">获取其命名空间匹配给定命名空间的自定义 XML 部件的新作用域内集合。</span><span class="sxs-lookup"><span data-stu-id="10951-110">Gets a new scoped collection of custom XML parts whose namespaces match the given namespace.</span></span>
+      获取其命名空间匹配给定命名空间的自定义 XML 部件的新作用域内集合。
 
-      <span data-ttu-id="10951-111">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="10951-111">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: getByNamespace(namespaceUri)
     fullName: getByNamespace(namespaceUri)
@@ -82,14 +82,14 @@ items:
         description: ''
       parameters:
         - id: namespaceUri
-          description: <span data-ttu-id="10951-112">必需。</span><span class="sxs-lookup"><span data-stu-id="10951-112">Required.</span></span> <span data-ttu-id="10951-113">命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="10951-113">The namespace URI.</span></span>
+          description: 必需。 命名空间 URI。
           type:
             - string
   - uid: 'word!Word.CustomXmlPartCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="10951-114">获取集合中项的数目。</span><span class="sxs-lookup"><span data-stu-id="10951-114">Gets the number of items in the collection.</span></span>
+      获取集合中项的数目。
 
-      <span data-ttu-id="10951-115">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="10951-115">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: getCount()
     fullName: getCount()
@@ -104,9 +104,9 @@ items:
         description: ''
   - uid: 'word!Word.CustomXmlPartCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="10951-116">获取基于其 ID 的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="10951-116">Gets a custom XML part based on its ID.</span></span> <span data-ttu-id="10951-117">只读。</span><span class="sxs-lookup"><span data-stu-id="10951-117">Read only.</span></span>
+      获取基于其 ID 的自定义 XML 部件。 只读。
 
-      <span data-ttu-id="10951-118">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="10951-118">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: getItem(id)
     fullName: getItem(id)
@@ -121,14 +121,14 @@ items:
         description: ''
       parameters:
         - id: id
-          description: <span data-ttu-id="10951-119">要检索的自定义 XML 部件的 ID 或索引。</span><span class="sxs-lookup"><span data-stu-id="10951-119">ID or index of the custom XML part to be retrieved.</span></span>
+          description: 要检索的自定义 XML 部件的 ID 或索引。
           type:
             - string
   - uid: 'word!Word.CustomXmlPartCollection#getItemOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="10951-120">获取基于其 ID 的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="10951-120">Gets a custom XML part based on its ID.</span></span> <span data-ttu-id="10951-121">如果 CustomXmlPart 不存在，则返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="10951-121">Returns a null object if the CustomXmlPart does not exist.</span></span>
+      获取基于其 ID 的自定义 XML 部件。 如果 CustomXmlPart 不存在，则返回 null 对象。
 
-      <span data-ttu-id="10951-122">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="10951-122">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: getItemOrNullObject(id)
     fullName: getItemOrNullObject(id)
@@ -143,11 +143,11 @@ items:
         description: ''
       parameters:
         - id: id
-          description: <span data-ttu-id="10951-123">必需。</span><span class="sxs-lookup"><span data-stu-id="10951-123">Required.</span></span> <span data-ttu-id="10951-124">要检索的对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="10951-124">ID of the object to be retrieved.</span></span>
+          description: 必需。 要检索的对象的 ID。
           type:
             - string
   - uid: 'word!Word.CustomXmlPartCollection#items:member'
-    summary: <span data-ttu-id="10951-125">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="10951-125">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     isPreview: true
     name: items
     fullName: items
@@ -160,15 +160,15 @@ items:
         type:
           - 'word!Word.CustomXmlPartCollection#items~0:complex'
   - uid: 'word!Word.CustomXmlPartCollection#load:member(1)'
-    summary: <span data-ttu-id="10951-126">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="10951-126">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="10951-127">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="10951-127">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="10951-128">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="10951-128">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="10951-129">`load(option?: string | string[]): Word.CustomXmlPartCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="10951-129">`load(option?: string | string[]): Word.CustomXmlPartCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Word.CustomXmlPartCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="10951-130">`load(option?: { select?: string; expand?: string; }): Word.CustomXmlPartCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="10951-130">`load(option?: { select?: string; expand?: string; }): Word.CustomXmlPartCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Word.CustomXmlPartCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="10951-131">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.CustomXmlPartCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="10951-131">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.CustomXmlPartCollection` - Only available on collection types.</span></span> <span data-ttu-id="10951-132">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="10951-132">It is similar to the preceding signature.</span></span> <span data-ttu-id="10951-133">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="10951-133">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="10951-134">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="10951-134">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="10951-135">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="10951-135">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.CustomXmlPartCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     isPreview: true
     name: load(option)
     fullName: load(option)
@@ -187,7 +187,7 @@ items:
           type:
             - 'word!Word.CustomXmlPartCollection#load~0:complex'
   - uid: 'word!Word.CustomXmlPartCollection#load:member(2)'
-    summary: <span data-ttu-id="10951-136">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="10951-136">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="10951-137">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="10951-137">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -202,7 +202,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="10951-138">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="10951-138">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'word!Word.CustomXmlPartCollection#load:member(3)'
@@ -222,9 +222,9 @@ items:
         - id: option
           description: ''
           type:
-            - 'word!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'word!Word.CustomXmlPartCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="10951-139">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="10951-139">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="10951-140">.</span><span class="sxs-lookup"><span data-stu-id="10951-140"></span></span> <span data-ttu-id="10951-141">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="10951-141"></span></span><!-- --><span data-ttu-id="10951-142">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.CustomXmlPartCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.CustomXmlPartCollectionData`</span><span class="sxs-lookup"><span data-stu-id="10951-142">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Word.CustomXmlPartCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Word.Interfaces.CustomXmlPartCollectionData`</span></span><!-- --><span data-ttu-id="10951-143">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="10951-143">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.CustomXmlPartCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.CustomXmlPartCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     isPreview: true
     name: toJSON()
     fullName: toJSON()
@@ -238,7 +238,7 @@ items:
           - 'word!Word.Interfaces.CustomXmlPartCollectionData:interface'
         description: ''
   - uid: 'word!Word.CustomXmlPartCollection#track:member(1)'
-    summary: '<span data-ttu-id="10951-144">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="10951-144">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="10951-145">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="10951-145">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="10951-146">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="10951-146">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     isPreview: true
     name: track()
     fullName: track()
@@ -252,7 +252,7 @@ items:
           - 'word!Word.CustomXmlPartCollection:class'
         description: ''
   - uid: 'word!Word.CustomXmlPartCollection#untrack:member(1)'
-    summary: '<span data-ttu-id="10951-147">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="10951-147">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="10951-148">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="10951-148">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="10951-149">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="10951-149">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="10951-150">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="10951-150">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     isPreview: true
     name: untrack()
     fullName: untrack()
@@ -266,7 +266,7 @@ items:
           - 'word!Word.CustomXmlPartCollection:class'
         description: ''
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.CustomXmlPart:class'
     name: Word.CustomXmlPart
@@ -278,7 +278,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'word!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -306,7 +306,7 @@ references:
       - uid: 'word!Word.Interfaces.CollectionLoadOptions:interface'
         name: Word.Interfaces.CollectionLoadOptions
         fullName: Word.Interfaces.CollectionLoadOptions
-  - uid: 'word!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'word!Word.Interfaces.CustomXmlPartCollectionData:interface'
     name: Word.Interfaces.CustomXmlPartCollectionData
